# django-supabase-storage

./: CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  example_settings.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_import.py  verify_setup.py
.github/workflows/: release.yml
django_supabase_storage/: __init__.py  storage_backends.py
